2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Fix distdir
	* tests/test-escape.stdout: New.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Fix the test-escape test
	* tests/Makefile.am: Use correct file names.
	Provide the *.cc part too.

2007-02-13  Akim Demaille  <akim.demaille@free.fr>

	ECHO_CMD
	* compiler.hh (SLEEP, ECHO_CMD): New.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Mingw32 portability
	* network.h (LIBPORT_FD_ISSET): New.
	Use it.

2007-02-12  Akim Demaille  <akim.demaille@free.fr>

	Nicer debug traces
	* network.h: here.
	* compiler.hh: CPP indentation.
	Use ifdef, not if.

2007-02-12  Akim Demaille  <akim.demaille@free.fr>

	Fix separator usage
	* network.h (operator<< (fd_set)): here.

2007-02-12  Akim Demaille  <akim.demaille@free.fr>

	Add missing inline
	* network.h (operator<<): For timeval and fd_set.

2007-02-12  Akim Demaille  <akim.demaille@free.fr>

	Add debug operator<<
	* network.h: For timeval and fd_set.

2007-02-10  Akim Demaille  <akim.demaille@free.fr>

	Import Escape from tc
	* escape.cc, escape.hh, escape.hxx: New.
	* libport-sources.mk: New.
	* libport.mk: Use it.
	* tests/test-escape.cc: New.
	* tests/Makefile.am: Adjust.

2007-02-01  Akim Demaille  <demaille@gostai.com>

	Add a FIXME
	* libport/ull-fixed-point.hh: here.

2007-02-01  Akim Demaille  <demaille@gostai.com>

	Move ufloats into libport::
	No compatilibity issue, there is a "using ...::ufloats" already.
	* libport/README, libport/uffloat.cc, libport/uffloat.hh,
	* libport/ufloat.cc, libport/ufloat.h, libport/ufloat.hh,
	* libport/ull-fixed-point.cc, libport/ull-fixed-point.hh,
	* libport/ulong-fixed-point.hh:
	Do it.

2007-02-01  Akim Demaille  <demaille@gostai.com>

	Use enum to declare int constants
	* uffloat.hh: here.
	* ufloat.h: Complete CPP guards.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	Can't use {} in Makefile targets
	* libport.mk: Revert the use of {} globbing.

2007-01-30  Akim Demaille  <demaille@gostai.com>
