@@ -1,3 +1,8 @@
+2007-02-16  Akim Demaille  <akim@lrde.epita.fr>
+
+	NOMINMAX.
+	* windows.hh: Use it to avoid min and max definitions.
+
 2007-02-15  Akim Demaille  <akim@lrde.epita.fr>
 
 	Fix distdir
